<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.subramanyavompolu.android.pj.MainActivity">

    <TextView
        android:id="@+id/baserate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/base_rate"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="20dp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="420dp"
        android:layout_marginEnd="87dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="87dp"
        android:layout_marginLeft="123dp" />

    <TextView
        android:id="@+id/aa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        android:layout_marginTop="128dp"
        android:text="@string/_24ct"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="160dp" />

    <TextView
        android:id="@+id/bb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        android:text="@string/_22ct"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/cc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="292dp"
        android:layout_marginEnd="268dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="191dp"
        android:text="@string/_1_tula"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="268dp"
        android:layout_marginLeft="48dp" />

    <TextView
        android:id="@+id/dd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="234dp"
        android:layout_marginEnd="268dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="249dp"
        android:text="@string/_1_2_tula"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="268dp"
        android:layout_marginLeft="30dp" />

    <TextView
        android:id="@+id/ee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="178dp"
        android:layout_marginEnd="268dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="305dp"
        android:text="@string/_1_4_tula"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="268dp"
        android:layout_marginLeft="30dp" />

    <TextView
        android:id="@+id/ff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="121dp"
        android:layout_marginEnd="268dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="362dp"
        android:text="@string/_1_gram"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="268dp" />

    <TextView
        android:id="@+id/TFOT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="303dp"
        android:layout_marginEnd="247dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="208dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="136dp"
        android:layout_marginRight="247dp" />

    <TextView
        android:id="@+id/TTOT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="303dp"
        android:layout_marginEnd="146dp"
        android:layout_marginStart="237dp"
        android:layout_marginTop="208dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="146dp"
        android:layout_marginLeft="237dp" />

    <TextView
        android:id="@+id/TFHT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="247dp"
        android:layout_marginEnd="247dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="267dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="247dp"
        android:layout_marginLeft="136dp" />

    <TextView
        android:id="@+id/TTHT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="247dp"
        android:layout_marginEnd="146dp"
        android:layout_marginStart="237dp"
        android:layout_marginTop="267dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="146dp"
        android:layout_marginLeft="237dp" />

    <TextView
        android:id="@+id/TFQT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="190dp"
        android:layout_marginEnd="247dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="320dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="247dp"
        android:layout_marginLeft="136dp" />

    <TextView
        android:id="@+id/TTQT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="190dp"
        android:layout_marginEnd="146dp"
        android:layout_marginStart="237dp"
        android:layout_marginTop="320dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="146dp"
        android:layout_marginLeft="237dp" />

    <TextView
        android:id="@+id/TFOG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="122dp"
        android:layout_marginEnd="247dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="370dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="247dp"
        android:layout_marginLeft="136dp" />

    <TextView
        android:id="@+id/TTOG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="122dp"
        android:layout_marginEnd="146dp"
        android:layout_marginStart="237dp"
        android:layout_marginTop="370dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="146dp"
        android:layout_marginLeft="237dp" />

    <Button
        android:id="@+id/button1"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="420dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="301dp"
        android:layout_marginTop="40dp"
        android:text="@string/cal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="301dp" />



</android.support.constraint.ConstraintLayout>
